# StudyOpenGL

./: .gitignore
android/StudyOpenGL/app/: CMakeLists.txt  build.gradle
android/StudyOpenGL/app/src/androidTest/java/com/study/studyopengl/: ExampleInstrumentedTest.java
android/StudyOpenGL/app/src/main/: AndroidManifest.xml
android/StudyOpenGL/app/src/main/cpp/: loader.cpp
android/StudyOpenGL/app/src/main/cpp/include/: mesh.h
android/StudyOpenGL/app/src/main/java/com/study/studyopengl/: Constants.java  MainActivity.java  PkmActivity.kt
android/StudyOpenGL/app/src/main/java/com/study/studyopengl/camera/: CameraActivity.java  CameraRenderer.java  CameraUtil.java  CameraView.java  FilterGroup.java
android/StudyOpenGL/app/src/main/java/com/study/studyopengl/data/: IndexArray.java  VertexArray.java
android/StudyOpenGL/app/src/main/res/layout/: activity_camera.xml  activity_main.xml  activity_pkm.xml
android/StudyOpenGL/app/src/main/res/raw/: ball_fs.glsl  ball_vs.glsl  cube_fs.glsl  cube_vs.glsl  cylinder_fs.glsl  cylinder_vs.glsl  earth_fs.glsl  earth_vs.glsl  filter_lookup_fs.glsl  filter_no_fs.glsl  filter_oes_fs.glsl  filter_vs.glsl  image_cube_fs.glsl  image_cube_vs.glsl  image_fs.glsl  image_vs.glsl  model_fs.glsl  model_vs.glsl  obj_fs.glsl  obj_vs.glsl  pkm_fs.glsl  pkm_vs.glsl  pyramid_fs.glsl  pyramid_vs.glsl  teapot_fs.glsl  teapot_vs.glsl
android/StudyOpenGL/app/src/main/res/values/: strings.xml  styles.xml
android/StudyOpenGL/app/src/test/java/com/study/studyopengl/: ExampleUnitTest.java
c/Pratice01/: CMakeLists.txt  glad.c  main.cpp
(+93 files in other folders)
